--- a/정리/~500.md
+++ b/정리/~500.md
@@ -55,3 +55,33 @@ func main() {
 ```
 
 ### ch18 슬라이스 354p
+
+- slice는 길이가 고정인 배열과는 달리 길이를 적지 않고 초기화 시 정해진다.
+- 슬라이스의 초기화 방법
+
+	```go
+	var slice1 = []int{1, 2, 3}
+	var slice2 = []int{1, 5:2, 10:3}
+	var slice = make([]int, 3) // 이 경우 각 요소는 0으로 초기화
+	```
+
+- 슬라이스의 요소 추가
+
+	```go
+	slice = append(slice, 4) // append는 기존 슬라이스의 원형을 변경하지 않음
+	```
+
+- 슬라이스의 특징
+
+	=> 슬라이스는 배열과 달리 포인터, 요소 수(len int), 총 길이(cap int)로 이루어진 구조체이며 포인터는 배열의 주소를 가리키므로
+	아래와 같이 각각 다른 슬라이스를 만들더라도 하나의 배열을 통해 만들었다면 append 또는 요소변경 시 참조되는 모든 슬라이스가 변경된다.
+	```go
+	array [5]int = [5]int{1, 2, 3, 4, 5}
+	slice1 := array[1:3:5]
+	slice2 := append(slice1, 4, 5)
+	```
+	단 append 사용 시 슬라이스의 빈 공간을 넘게 되면 새로운 배열을 생성하고 가리키게 되므로 독립적인 슬라이스가 만들어진다.
+
+	**궁금한 점**
+
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/55cda247-41b2-4c18-bcdd-28e3ccefdd13)
