--- a/정리/~500.md
+++ b/정리/~500.md
@@ -82,6 +82,43 @@ func main() {
 	```
 	단 append 사용 시 슬라이스의 빈 공간을 넘게 되면 새로운 배열을 생성하고 가리키게 되므로 독립적인 슬라이스가 만들어진다.
 
+	=> 슬라이싱을 할 때 [a:b:c] 의 형태에서 a는 시작 인덱스, b는 끝-1 인덱스, c는 슬라이스의 길이가 되며, c-a로 cap()이 정해진다. (c생략 시 가장 마지막 인덱스가 자동지정됨)
+
 	**궁금한 점**
 
 	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/55cda247-41b2-4c18-bcdd-28e3ccefdd13)
+	
+	=> 공간이 부족할 경우 원래 배열 길이의 2배로 하여 생성하므로
+
+	- 내장 함수 copy()
+
+	```go
+	copy(dst, slice) // dst는 복사되는 변수, slice는 복사 대상
+	```
+
+	=> len(dst)와 len(slice) 중 더 길이가 작은 값을 기준으로 그 길이만큼만 복사된다.
+
+- 슬라이스 요소 제거
+
+```go
+slice = append(slice[:idx], slice[idx+1:]...)
+```
+
+- 슬라이스 요소 추가
+
+```go
+slice = append(slice, 0)
+copy(slice[:idx+1], slice[:idx])
+slice[idx] = 100
+// 1 2 3   4 5 6 0
+// 1 2 0   3 4 5 6
+// 1 2 100 3 4 5 6
+```
+
+- 슬라이스 정렬
+
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/0fea3e05-6e79-4867-8638-c33a1ff81c85)
+
+- 구조체 슬라이스 정렬
+
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/c0cfcc58-3042-4dc9-8ac7-1043a531422e)
