simple until ch20

--- a/정리/~505.md
+++ b/정리/~505.md
@@ -122,3 +122,17 @@ slice[idx] = 100
 - 구조체 슬라이스 정렬
 
 	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/c0cfcc58-3042-4dc9-8ac7-1043a531422e)
+
+
+### ch20 인터페이스
+
+- 인터페이스 구조체로 타입 변환 
+
+	(O)
+
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/b068baa3-927c-4311-9f13-81974beb42cd)
+
+	(X)
+
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/4e90196e-e2a5-475a-a22e-c9d84c7d9be1)
+	![image](https://github.com/haseungyeon/golang_turker/assets/59682268/ff048741-8dbf-4184-b730-bd01d401443a)
